# LangChainLearnBook

./: README.md
CH1/ch1/: .env  pyproject.toml
CH1/ch1/ch1/: 01_dotenv.py
CH10/demo1/: pyproject.toml
CH10/demo1/demo1/: demo10-1.py
CH11/demo1/: pyproject.toml
CH11/demo1/demo1/: .env  demo11-1.py
CH12/ch12/: pyproject.toml
CH12/ch12/ch12/: 00_qdrant_advance.py  01_init_qdrant.py  02_filter.py
CH13/: pyproject.toml
CH13/13-1/: .env  app.py
CH13/13-2/: .env  app.py
CH13/13-3/: .env  app.py  app_image.py
CH13/13-4/: app.py
CH14/demo1/: pyproject.toml
CH14/demo1/demo1/: .env  demo14-1.py  demo14-2.py  demo14-3.py  demo14-4.py
CH15/ch15/: pyproject.toml
CH15/ch15/ch15/: rag.py
CH15/ch15/langserveapp/: Dockerfile  README.md  pyproject.toml
CH15/ch15/langserveapp/app/: server.py
CH15/ch15/langserveapp/rag/: __init__.py  rag_chain.py
CH2/: pyproject.toml
CH2/2-2/: app.py
CH2/2-3/: .env  app.py
CH2/2-4/: app.py
CH3/: pyproject.toml
CH3/3-1/: .env  app.py
CH3/3-2/: .env  app.py
CH3/3-3/: app.py
CH4/demo1/: pyproject.toml
CH4/demo1/demo1/: .env  app.py  demo4-1.py  demo4-2.py  demo4-3.py  demo4-4.py  demo4-5.py  demo4-6.py  demo4-7.py
CH5/demo1/: pyproject.toml
CH5/demo1/demo1/: .env  demo5-1.py  demo5-2.py  demo5-3.py  demo5-4.py  demo5-5.py  demo5-6.py  demo5-7.py  demo5-8.py
CH6/ch6/: .env  langchain.db  pyproject.toml
CH6/ch6/ch6/: 01_rag_with_history.py
CH7/: pyproject.toml
CH7/7-2/: .env  app.py
CH7/7-3/: app.py
CH7/7-4/: .env  app.py
CH7/7-4/static/: audio.webm
CH7/7-4/static/css/: style.css
CH7/7-4/static/js/: main.js
CH7/7-4/templates/: index.html
CH8/: pyproject.toml
CH8/8-2/: .env  app.py
CH8/8-3/: app.py
CH8/8-4/: app.py
CH8/8-5/: app.py
CH8/8-6/: app.py
CH9/ch9/: .env  pyproject.toml
CH9/ch9/ch9/: 01_hf_pipeline.py  02_hf_endpoint.py  03_hf_embedding.py
