[tool.poetry]
name = "demo1"
version = "0.1.0"
description = ""
authors = ["Ian Chen <xxx@xxx.xxx>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.0"
python-dotenv = "^1.0.1"
langchain-openai = "^0.2.0"
langchain-community = "^0.3.0"
pypdf = "^4.3.1"
langchain-qdrant = "0.2.0.dev1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
