[tool.poetry]
name = "demo1"
version = "0.1.0"
description = ""
authors = ["Ian Chen <xxx@xxx.xxx>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
langchain = "^0.3.0"
langchain-openai = "^0.1.22"
langchain-ollama = "^0.1.1"
langchain-community = "^0.2.12"
qdrant-client = "^1.11.1"
langchain-qdrant = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
