[tool.poetry]
name = "ch15"
version = "0.1.0"
description = ""
authors = ["KoKo Mexcelsa <qqkerk@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
qdrant-client = "^1.10.1"
langchain-community = "^0.3.0"
pypdf = "^4.3.1"
python-dotenv = "^1.0.1"
langchain-cli = "^0.0.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
